# rest-todo-api

./: .gitignore  pyproject.toml
tasks/: models.py  serializers.py  urls.py  views.py
todo/: settings.py  urls.py
